# nicefid

./: .gitignore  README.md  pyproject.toml  pytest.ini
nicefid/: __init__.py  check_download_inception.py  cleanfid_resize.py  compute_features_old.py  compute_fid.py  compute_kid.py  feature_extractor_old.py  features.py  fid.py  image_dataset.py  inception_v3w.py  kid.py  list_images.py  resize.py  settings.py  sqrtm_eig.py
