[tool.poetry]
name = "nicefid"
version = "0.1.0"
description = ""
authors = ["Richard Löwenström <samedii@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
clean-fid = "^0.1.24"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
