[tool.poetry]
name = "nicefid"
version = "1.0.0"
description = "Minimalistic wrapper around cleanfid to make the api more user friendly. Calculates FID and KID from sets of images."
homepage = "https://github.com/samedii/nicefid"
repository = "https://github.com/samedii/nicefid"
readme = "README.md"
authors = ["Richard Löwenström <samedii@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
clean-fid = "^0.1.24"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
