[tool.poetry]
name = "nicefid"
version = "2.1.1"
description = "Minimalistic FID and KID implementation. Reference checked against cleanfid"
homepage = "https://github.com/samedii/nicefid"
repository = "https://github.com/samedii/nicefid"
readme = "README.md"
authors = ["Richard Löwenström <samedii@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
resize-right = "^0.0.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
clean-fid = "^0.1.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
